# plover-application-dictionary

./: .gitignore  README.md  setup.cfg
plover_application_dictionary/: __init__.py  extension.py  meta.py  multiple.py  single.py  single_dictionary.py  window_tracker.py
plover_application_dictionary/dictionary/: __init__.py  multiple.py  single.py
