[metadata]
name = plover-application-dictionary
keywords = plover plover_plugin
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = Pipatooa
author_email = pipatooa@pipatooa.co.uk
url = https://github.com/Pipatooa/plover-application-dictionary


[options]
zip_safe = True
python_requires = >=3.7
setup_requires =
  setuptools >= 30.3.0
install_requires =
  plover >= 4.0.0dev12
  PyWinCtl ~= 0.0.42
packages = find:
include_package_data = True

[options.packages.find]
include = plover_application_dictionary*

[options.entry_points]
plover.dictionary =
  ad = plover_application_dictionary:SingleApplicationDictionary
plover.extension =
  application_dictionary_extension = plover_application_dictionary:ApplicationDictionaryExtension
